code after refactoring

--- a/homework05/index.html
+++ b/homework05/index.html
@@ -6,6 +6,7 @@
     <title>Перебираючі методи масивів</title>
 </head>
 <body>
+    <h1>Open console</h1>
     <script src="./script.js"></script>
 </body>
 </html>
